lab-setup/basic-ingress/shared-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: sharedingress2
 namespace: default
 annotations:
 # See the k8s-bigip-ctlr documentation for information about
 # all Ingress Annotations
 # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
   virtual-server.f5.com/ip: "10.1.10.82"
   virtual-server.f5.com/http-port: "8080"
   virtual-server.f5.com/health: '[{"path": "www.app1.com/", "send": "HTTP GET /", "interval": 5, "timeout": 10}]'
spec:
  rules:
  - host: coffee.shared-1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
  - host: tea.shared-1.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tea-svc
          servicePort: 80
